// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY eNHHez"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kTwDzI"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY jTdfvW"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-erijoS kPCrAG"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY doHeXV"
      placeholder="medium"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="large"
      type="email"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY qyezZ"
        placeholder="xlarge"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY jPBdqa"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kkoGQh"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP kJWjmt"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
